fixed alignment of labels above items for mobile

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -740,3 +740,9 @@ body
       
   .dashboard .list .list-top .list-title .edit-modal .cancel-btn
     margin 0
+    
+  .dashboard .list .list-table .list-labels .owner-col
+    width 80px
+    
+  .dashboard .list .list-table .list-labels .remove-col
+    width 75px
